<resources>
    <string name="app_name">RxJava URL Downloader</string>
    <string name="album_title">Album Title</string>
    <string name="album_photo_url">photo url</string>
    <string name="album_thumb_url">thumbnail url</string>
    <string name="empty_job_id">unassigned</string>
    <string name="job_id">Job Id</string>
    <string name="job_size">Job Size</string>
    <string name="job_status">Job Status</string>
    <string name="create_job">Create a Job</string>
    <string name="manage_jobs">Manage Jobs</string>
    <string name="select_jobs">Select 4 Job</string>
    <string name="unselect_jobs">Unselect</string>
    <string name="run_jobs">Run All Jobs</string>
    <string name="stop_jobs">Stop All Jobs</string>
    <string name="nothing_selected">Nothing is Selected!</string>
    <string name="jobs_paused">All Running Jobs are Paused!</string>
    <string name="jobs_stopped">All Jobs are Stopped!</string>
    <string name="no_jobs_queued">No Jobs are Queued!</string>
    <string name="jobs_running">Available Jobs are Running!</string>
    <string name="job_created">Job Created</string>
    <string name="job_failed">Job Failed!</string>
    <string name="queue_job">Queue Job</string>
    <string name="run_job">Run Job</string>
    <string name="pause_job">Pause Job</string>
    <string name="resume_job">Resume Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="pause_jobs">Pause All Jobs</string>
    <string name="everything_selected">Everything Selected</string>
    <string name="unselected">Unselected!</string>
    <string name="title_job_url_list"><b>The First 100 URLs for Job:</b></string>
    <string name="ok">Ok</string>
    <string name="job_dialog_title">Job Detail Management</string>
    <string name="only_show_100">showing the first 100 URLs only</string>
</resources>
