<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:cardCornerRadius="@dimen/standard_card_corner_radius"
        app:cardElevation="@dimen/standard_card_elevation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/standard_margin"
            >

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/album_title"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/album_photo_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/album_photo_url"
                android:textStyle="normal"
                />

            <TextView
                android:id="@+id/album_thumb_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/album_thumb_url"
                android:textStyle="normal"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>