<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="view"
            type="com.harlie.rxjavaurldownloader.BaseActivity"/>
        <variable
            name="presenter"
            type="com.harlie.rxjavaurldownloader.viewmodel.MainActivityPresenter"/>
        <variable
            name="obj"
            type="com.harlie.rxjavaurldownloader.model.AlbumUrl"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/album_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:cardCornerRadius="@dimen/standard_card_corner_radius"
            app:cardElevation="@dimen/standard_card_elevation"
            app:cardBackgroundColor="@{obj.getBackgroundColor()}"
            android:onClick="@{() -> presenter.doClick(obj)}"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/standard_margin"
                >

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.getAlbumTitle()}"
                    android:hint="@string/album_title"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/album_photo_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.getAlbumPhotoUrl()}"
                    android:hint="@string/album_photo_url"
                    android:textStyle="normal"
                    />

                <TextView
                    android:id="@+id/album_thumb_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.getAlbumThumbnailUrl()}"
                    android:hint="@string/album_thumb_url"
                    android:textStyle="normal"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/job_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.getJobId()}"
                    android:hint="@string/job_id"
                    android:textStyle="normal"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</layout>