<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.harlie.rxjavaurldownloader.viewmodel.JobListActivityPresenter"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JobListActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/job_list_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pause_jobs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.pauseAllJobs(v)}"
            android:text="@string/pause_jobs"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toStartOf="@+id/run_jobs_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/run_jobs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.runAllJobs(v)}"
            android:text="@string/run_jobs"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toStartOf="@+id/stop_jobs_button"
            app:layout_constraintStart_toEndOf="@+id/pause_jobs_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/stop_jobs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.stopAllJobs(v)}"
            android:text="@string/stop_jobs"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/run_jobs_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
