<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.harlie.rxjavaurldownloader.viewmodel.MainActivityPresenter"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/album_url_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/create_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.createJob(v)}"
            android:text="@string/create_job"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toStartOf="@+id/manage_jobs_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/manage_jobs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.manageJobList(v)}"
            android:text="@string/manage_jobs"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toStartOf="@+id/select_all_button"
            app:layout_constraintStart_toEndOf="@+id/create_job_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/select_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:onClick="@{(v) -> presenter.selectAllAlbums(v)}"
            android:text="@string/select_jobs"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/manage_jobs_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
